welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:32: error: value Red is not a member of object java.awt.Color
  faireL(Color.Red,Color.Blue)
               ^PatternPicture:32: error: value Blue is not a member of object java.awt.Color
  faireL(Color.Red,Color.Blue)
                         ^